[gd_scene load_steps=3 format=3 uid="uid://bde7a8f8d7q8j"]

[ext_resource type="Script" uid="uid://hu667yi20suh" path="res://scripts/InventoryPopup.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://bcy08y4x4a7v" path="res://themes/popup_theme.tres" id="2_theme"]

[node name="InventoryPopup" type="PopupPanel"]
title = "Inventory"
initial_position = 2
size = Vector2i(800, 600)
visible = true
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = 795.0
offset_bottom = 595.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Inventory & Equipment"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="MainHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EquipmentContainer" type="Control" parent="VBoxContainer/MainHBox"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EquipmentPanel" type="Panel" parent="VBoxContainer/MainHBox/EquipmentContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EquipmentLabel" type="Label" parent="VBoxContainer/MainHBox/EquipmentContainer/EquipmentPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -25.0
offset_right = 595.0
offset_bottom = -5.0
grow_vertical = 0
text = "Equipment"

[node name="EquipmentGrid" type="GridContainer" parent="VBoxContainer/MainHBox/EquipmentContainer/EquipmentPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = 595.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
columns = 4

[node name="InventoryContainer" type="Control" parent="VBoxContainer/MainHBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InventoryPanel" type="Panel" parent="VBoxContainer/MainHBox/InventoryContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InventoryLabel" type="Label" parent="VBoxContainer/MainHBox/InventoryContainer/InventoryPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -25.0
offset_right = 145.0
offset_bottom = -5.0
grow_vertical = 0
text = "Inventory"

[node name="InventoryGrid" type="GridContainer" parent="VBoxContainer/MainHBox/InventoryContainer/InventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = 145.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="StatsPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="StatsLabel" type="RichTextLabel" parent="VBoxContainer/StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 204.0
offset_top = -109.0
offset_right = -200.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
text = "Equipment Bonuses: None"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close"
